repositories/demo-canary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - name: 8080-tcp
    port: 80
    targetPort: 8080
